[package]
edition = "2021"
name = "embassy-stm32f4-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
autobins = true

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0",  features = ["defmt", "stm32f411re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono","trustzone-secure"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0",  features = ["defmt" ] }
embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-net-wiznet = { version = "0.2.0",  features = ["defmt"] }
embassy-futures = { version = "0.1.0"   }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}
sensor-tlv493d = {version = "0.1.0", default_features = false }
qmc5883l = "0.0.1"
libm = "0.2.15"
rust-ekf = { path = "./rust-ekf" }


[dev-dependencies]
defmt-test = "0.4.0"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`

[profile.release]
debug = 2



[[bin]]
name = "main"
harness = false

[[bin]]
name = "test_accel_2_pos"
harness = false

[[bin]]
name = "test_button"
harness = false

[[bin]]
name = "test_ekf"
harness = false

[[bin]]
name = "test_gps"
harness = false

[[bin]]
name = "test_gy271"
harness = false

[[bin]]
name = "test_gy271_lib"
harness = false

[[bin]]
name = "test_gzp"
harness = false

[[bin]]
name = "test_pwmx4"
harness = false

[[bin]]
name = "test_gzp2"
harness = false

[[bin]]
name = "test_i2c_scan"
harness = false

[[bin]]
name = "test_icm"
harness = false

[[bin]]
name = "test_nav"
harness = false

[[bin]]
name = "test_nav2"
harness = false

[[bin]]
name = "test_nav3"
harness = false

[[bin]]
name = "test_pwm"
harness = false

[[bin]]
name = "test_tlv"
harness = false

[[bin]]
name = "test_tlv_lib"
harness = false

[[test]]
name = "tests" # You can name this whatever you want
harness = false # Also important!
